--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.3.7",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
