--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.29.3",
+    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.7",
     "react-dom": "^18.2.0",
