--- a/package.json
+++ b/package.json
@@ -41,16 +41,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.6",
+    "@tiptap/react": "^2.0.0-beta.207",
+    "@tiptap/starter-kit": "^2.0.0-beta.207",
     "axios": "^1.1.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.29.3",
-    "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.7",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "redux-saga": "^1.2.1",
+    "slate": "^0.87.0",
+    "slate-react": "^0.87.1",
     "styled-components": "^5.3.6"
   }
 }
